# TradeMind

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Makefile  PROJECT.md  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.production.yml  docker-compose.public.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
freqtrade/: Dockerfile  docker-entrypoint.sh
freqtrade/user_data/: config.json.tpl
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  format.ts  styles.css  types.ts
migrations/: Dockerfile  env.py
migrations/versions/: 20260715_0001_initial_schema.py  20260715_0002_phase4_config_notifier_state.py  20260716_0001_llm_config_state.py  20260717_0001_signal_model_input.py
scripts/: deploy.sh  reset_all_data.sh  trigger_and_watch.sh
scripts/backtest/: _bootstrap.py  cache.py  history.py  ledger.py  replay.py
services/admin_api/: Dockerfile
services/admin_api/app/: auth.py  deps.py  main.py  (+2 more)
services/common/: config.py  enums.py  kill_switch.py  llm_config_store.py  logging.py  redis_keys.py  risk_config_store.py  sentiment.py
services/llm_service/: ARCHITECTURE.md  Dockerfile
services/notifier/: Dockerfile
services/risk_engine/: Dockerfile
services/scheduler/: Dockerfile
tools/: __init__.py
tools/historical_replay/: README.md  __init__.py  cli.py  demo.py  io.py  metrics.py  schemas.py  simulator.py
(+123 files in other folders)
