[project]
name = "trademind"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.40",
    "ccxt>=4.4",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["services"]
asyncio_mode = "auto"
